--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: nimak
-description: The personal blog of Nima Kamoosi
+description: Nima's personal blog
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
