Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: Nima's notes
 logo: profile.png
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-tactile
+theme: jekyll-theme-minimal
