--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: nimak
-description: Nima's notes
+title: Nima's notes
+description: Nima Kamoosi's public notes
 logo: profile.png
 show_downloads: false
 google_analytics:
